tests/parser/fail/v18_fail_anonymous_struct_field.ep
# COMPILE_FAIL: Expected COLON
struct Meta {
    line: i64
}

struct Node {
    Meta
}

fun main(): void {
}
